--- a/.gitignore
+++ b/.gitignore
@@ -578,3 +578,4 @@ odlib/__pycache__/Ephemeris.cpython-37.pyc
 odlib/__pycache__/Asteroid.cpython-37.pyc
 odlib/ImageProcessing/__pycache__/LSPR.cpython-37.pyc
 /.idea/
+*.pyc
